--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,59 @@
 
 
 
+/* External styling from: https://codepen.io/manikoth/pen/NNNBYe.css
+ */
 /* Doodle Stage */
-/* change this styling-- make it responsive? */
 #stage {
-  background: #ccc;
-  height: 300px;
-  width: 600px;
-}
+  /*   background: #ccc; */
+    height: 300px;
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  #g-low{
+    position: relative;
+    top: 30px;
+  }
+  
+  #e{
+    position: relative;
+    top: 15px;
+    margin-left: -20px;
+    fill: #ea4335;
+  }
+  
+  .d20{
+    position: relative;
+  }
+  
+  #nat20{
+    fill: #ea4335;
+    top: -200px;
+    left: -300px;
+  }
+  #plain20 g, #plain20{
+    fill: #fbbc05;
+    top: 13px;
+  }
+  
+  #pencil{
+    transform: scale(.3);
+    position: relative;
+    bottom: 20px;
+    margin-left: -16px;
+  }
+  
+  svg{
+    transform: scale(.8);
+  }
+  
+  #path{
+    position: absolute;
+    left: 70px;
+    top: 85px;
+  }
 
